
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2021 OCT 28a
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in _Vk_drift_perp_to_bdry(), changed the algorithm so that only nodes perpendicular to
      the surface are used to determie Vk_drift
    - added _mu_effective_perpendicular_boundary_plane()
    - in update_bdry_wall(), changed the way the thermionic electrode BC is applied: now 
      when the electrode is an anode, the electron flux out of the surface is set to diffusion
      when the electrode is a cathode, the electron flux out of the surface is set to convection
  * in bin/MHD_earth_entry2.wrp
    - made various changes to the grid and cycle code.


2021 OCT 14a
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - in the Parent-Park model, fixed a typo related to the third body lists
  * in model/share/fluid_share.c
    - in _w_product_at_catalytic_wall(), fixed a variable definition bug: dim_t VionRB
      should be EXM_vec3D_t VionRB
  * in src/common.c
    - added _smooth3()
    

2021 OCT 06a
  * in model/emfield/_Epotential-Bfixed/emfield.c and model/emfield/_Epotential/emfield.c
    - added find_DeltaVk_drift_from_mu()
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - renamed _Vk_perp_to_bdry() to _Vk_drift_perp_to_bdry()
    - in _Vk_drift_perp_to_bdry(), now calls find_Vk_drift() and 
      find_unit_vector_normal_to_boundary_plane()
  * in model/share/emfield_share.c
    - added find_Vk_drift()
  * in bin/MHD_earth_entry2.wrp
    - made improvements
    

2021 OCT 03a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - got rid of the last 4 post processing variables related to cesium
  * in model/fluid/doc/Transport_Equations/report.tex