@@ -78,12 +78,12 @@ void write_bdry_fluid_template(FILE **controlfile){
     "    BDRY_FREESTREAM1                  %c   Freestream, 1o, params Vx,Vy,"if3DL("Vz,")" P, T\n"
     "    _________________________________________________________________________________________\n"
     "    }\n"
-    "    All(BDRY_WALLTFIXED1);\n"
-    "    Plane(\"i\",is,BDRY_INFLOWSUPERSONIC);\n"
-    "    Plane(\"i\",ie,BDRY_OUTFLOWSUPERSONIC1);\n"
+    "    All(BDRY_OUTFLOWSUPERSONIC1);\n"
     "    Twall=300.0; {K}\n"
     "    Plane(\"j\",js,BDRY_WALLTFIXED1,Twall);\n"
     "    Plane(\"j\",je,BDRY_WALLTFIXED1,Twall);\n"
+    "    Plane(\"i\",is,BDRY_INFLOWSUPERSONIC);\n"
+    "    Plane(\"i\",ie,BDRY_OUTFLOWSUPERSONIC1);\n"
 #ifdef _3D
     "    Plane(\"k\",ks,BDRY_SYMMETRICAL2);\n"
     "    Plane(\"k\",ke,BDRY_SYMMETRICAL2);\n"
